--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -53,15 +53,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 9.90 GB\n",
-      "Used RAM: 5.30 GB\n",
-      "Percentage Usage Of RAM: 36.0%\n",
+      "Available RAM: 14.10 GB\n",
+      "Used RAM: 1.11 GB\n",
+      "Percentage Usage Of RAM: 8.8%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 17.04 GB\n",
-      "Used Disk: 7.95 GB\n",
-      "Percentage Usage Of Disk: 31.8%\n"
+      "Available Disk: 16.99 GB\n",
+      "Used Disk: 8.00 GB\n",
+      "Percentage Usage Of Disk: 32.0%\n"
      ]
     }
    ],
@@ -98,6 +98,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score\n",
+    "from wrangle import prepare\n",
     "from gbm_classifier import Classification"
    ]
   },
@@ -111,30 +112,123 @@
    "outputs": [],
    "source": [
     "# get the data\n",
-    "crime = pd.read_csv(\"survival.csv\")"
+    "titanic = pd.read_csv(\"titanic.csv\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "4a010638-a2f7-47ba-848e-fbec65b27da1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data Wrangling:\n",
+      "> Removing Unnecessary Columns\n",
+      "> Getting Titles From Name\n",
+      "> Transforming Ticket\n",
+      "> Replacing Missing Values\n",
+      "> Transforming Cabin\n",
+      "> Shuffling The Data\n",
+      "0.01 Seconds\n",
+      "Plotting:\n",
+      "> Plotting Correlations\n",
+      "> Age vs. Fare\n",
+      "> Plotting Age\n",
+      "> Plotting Fare\n",
+      "> Plotting Survived\n",
+      "> Plotting Pclass\n",
+      "> Plotting Sex\n",
+      "> Plotting SibSp\n",
+      "> Plotting Parch\n",
+      "> Plotting Ticket\n",
+      "> Plotting Cabin\n",
+      "> Plotting Embarked\n",
+      "> Plotting Title\n",
+      "> Survived vs. Pclass\n",
+      "> Survived vs. Sex\n",
+      "> Survived vs. SibSp\n",
+      "> Survived vs. Parch\n",
+      "> Survived vs. Ticket\n",
+      "> Survived vs. Cabin\n",
+      "> Survived vs. Embarked\n",
+      "> Survived vs. Title\n",
+      "> Pclass vs. Sex\n",
+      "> Pclass vs. SibSp\n",
+      "> Pclass vs. Parch\n",
+      "> Pclass vs. Ticket\n",
+      "> Pclass vs. Cabin\n",
+      "> Pclass vs. Embarked\n",
+      "> Pclass vs. Title\n",
+      "> Sex vs. SibSp\n",
+      "> Sex vs. Parch\n",
+      "> Sex vs. Ticket\n",
+      "> Sex vs. Cabin\n",
+      "> Sex vs. Embarked\n",
+      "> Sex vs. Title\n",
+      "> SibSp vs. Parch\n",
+      "> SibSp vs. Ticket\n",
+      "> SibSp vs. Cabin\n",
+      "> SibSp vs. Embarked\n",
+      "> SibSp vs. Title\n",
+      "> Parch vs. Ticket\n",
+      "> Parch vs. Cabin\n",
+      "> Parch vs. Embarked\n",
+      "> Parch vs. Title\n",
+      "> Ticket vs. Cabin\n",
+      "> Ticket vs. Embarked\n",
+      "> Ticket vs. Title\n",
+      "> Cabin vs. Embarked\n",
+      "> Cabin vs. Title\n",
+      "> Embarked vs. Title\n",
+      "> Age vs. Survived\n",
+      "> Age vs. Pclass\n",
+      "> Age vs. Sex\n",
+      "> Age vs. SibSp\n",
+      "> Age vs. Parch\n",
+      "> Age vs. Ticket\n",
+      "> Age vs. Cabin\n",
+      "> Age vs. Embarked\n",
+      "> Age vs. Title\n",
+      "> Fare vs. Survived\n",
+      "> Fare vs. Pclass\n",
+      "> Fare vs. Sex\n",
+      "> Fare vs. SibSp\n",
+      "> Fare vs. Parch\n",
+      "> Fare vs. Ticket\n",
+      "> Fare vs. Cabin\n",
+      "> Fare vs. Embarked\n",
+      "> Fare vs. Title\n",
+      "6.5 Seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "# prepare the data for machine learning\n",
+    "titanic = prepare(df=titanic, name=\"Data Preparation\", path=None, plots=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "45f9301a-5582-4abd-8e1b-33a9302eb898",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "# split up the data into training and testing\n",
-    "y = crime[[\"Survived\"]]\n",
-    "X = crime.drop(columns=\"Survived\")\n",
-    "trainX = X.head(int(0.8 * X.shape[0]))\n",
-    "trainy = y.head(int(0.8 * y.shape[0]))\n",
+    "# get the testing data\n",
+    "y = titanic[[\"Survived\"]]\n",
+    "X = titanic.drop(columns=\"Survived\")\n",
     "testX = X.tail(int(0.2 * X.shape[0])).reset_index(drop=True)\n",
     "testy = y.tail(int(0.2 * y.shape[0])).reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a543694e-96f5-4e1e-ac1c-17e2694f648b",
    "metadata": {
     "tags": []
@@ -148,22 +242,32 @@
       "---- Titanic Classification Analysis ----\n",
       "\n",
       "Model Training:\n",
-      "> Transforming The Data\n",
+      "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
       "> Training XGBoost\n",
-      "1.81 Seconds\n",
+      "0.32 Seconds\n",
+      "Model Performance:\n",
+      "> Transforming The Testing Data\n",
+      "> Scoring The Model\n",
+      "1.23 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.58 Seconds\n",
+      "0.08 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.06 Seconds\n",
+      "0.02 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.28 Seconds\n"
+      "0.21 Seconds\n",
+      "Accuracy: 0.8271573033707866\n",
+      "In Control: 100.0%\n",
+      "Confusion Matrix:\n",
+      "    0   1\n",
+      "0  87  10\n",
+      "1  21  60\n"
      ]
     }
    ],
@@ -189,17 +293,17 @@
     "    model.load()  # load the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
     "except:\n",
-    "    model.fit(trainX, trainy)  # build the machine learning pipeline\n",
+    "    model.validate(X, y)  # build the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
-    "    # print(f\"Accuracy: {model.accuracy}\")\n",
-    "    # print(f\"In Control: {model.in_control}\")\n",
-    "    # print(\"Confusion Matrix:\")\n",
-    "    # print(model.confusion)"
+    "    print(f\"Accuracy: {model.accuracy}\")\n",
+    "    print(f\"In Control: {model.in_control}\")\n",
+    "    print(\"Confusion Matrix:\")\n",
+    "    print(model.confusion)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "2b88af05-8286-459b-b34d-0086c4065fa6",
    "metadata": {},
    "outputs": [
@@ -211,13 +315,13 @@
       "1. Sex_male\n",
       "2. Title_Rev.\n",
       "3. Title_Mr.\n",
-      "4. Sex_female\n",
-      "5. Pclass_3\n",
+      "4. Pclass_3\n",
+      "5. Sex_female\n",
       "6. Pclass_2\n",
       "7. Title_Master.\n",
       "8. Ticket_4\n",
       "9. Cabin_N\n",
-      "10. Ticket_1\n",
+      "10. Pclass_1\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -239,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "30b9ca50-06d6-49b7-848b-c0852e302909",
    "metadata": {
     "tags": []
@@ -265,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "da46103b-b661-4234-8a31-9804f9139435",
    "metadata": {},
    "outputs": [
@@ -301,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "2226e286-b762-4265-a3de-de9a5561d5ec",
    "metadata": {
     "tags": []
@@ -314,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "bdd600fc-dae1-4f58-9117-0ce0d7fc232c",
    "metadata": {},
    "outputs": [
@@ -328,10 +432,10 @@
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
       "> Training XGBoost\n",
-      "1.21 Seconds\n",
+      "0.34 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.2 Seconds\n"
+      "0.14 Seconds\n"
      ]
     }
    ],
