--- a/lasso.ipynb
+++ b/lasso.ipynb
@@ -10,14 +10,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.17.0)\n",
-      "Requirement already satisfied: tenacity>=6.2.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (8.2.3)\n",
+      "Collecting plotly\n",
+      "  Obtaining dependency information for plotly from https://files.pythonhosted.org/packages/df/79/c80174d711ee26ee5da55a9cc3e248f1ec7a0188b5e4d6bbbbcd09b974b0/plotly-5.17.0-py2.py3-none-any.whl.metadata\n",
+      "  Using cached plotly-5.17.0-py2.py3-none-any.whl.metadata (7.0 kB)\n",
+      "Collecting tenacity>=6.2.0 (from plotly)\n",
+      "  Obtaining dependency information for tenacity>=6.2.0 from https://files.pythonhosted.org/packages/f4/f1/990741d5bb2487d529d20a433210ffa136a367751e454214013b441c4575/tenacity-8.2.3-py3-none-any.whl.metadata\n",
+      "  Using cached tenacity-8.2.3-py3-none-any.whl.metadata (1.0 kB)\n",
       "Requirement already satisfied: packaging in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (23.1)\n",
+      "Using cached plotly-5.17.0-py2.py3-none-any.whl (15.6 MB)\n",
+      "Using cached tenacity-8.2.3-py3-none-any.whl (24 kB)\n",
+      "Installing collected packages: tenacity, plotly\n",
+      "Successfully installed plotly-5.17.0 tenacity-8.2.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: py-cpuinfo in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (9.0.0)\n",
+      "Collecting py-cpuinfo\n",
+      "  Using cached py_cpuinfo-9.0.0-py3-none-any.whl (22 kB)\n",
+      "Installing collected packages: py-cpuinfo\n",
+      "Successfully installed py-cpuinfo-9.0.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pandas-datareader in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (0.10.0)\n",
-      "Requirement already satisfied: lxml in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (4.9.3)\n",
+      "Collecting pandas-datareader\n",
+      "  Using cached pandas_datareader-0.10.0-py3-none-any.whl (109 kB)\n",
+      "Collecting lxml (from pandas-datareader)\n",
+      "  Obtaining dependency information for lxml from https://files.pythonhosted.org/packages/44/1b/0771c38e65ad23e25368b5e07c920054774b8d12477a4fad116bf500de73/lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl.metadata\n",
+      "  Using cached lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl.metadata (3.8 kB)\n",
       "Requirement already satisfied: pandas>=0.23 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (2.0.3)\n",
       "Requirement already satisfied: requests>=2.19.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (2.31.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas>=0.23->pandas-datareader) (2.8.2)\n",
@@ -29,6 +43,9 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (1.26.15)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (2023.7.22)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas>=0.23->pandas-datareader) (1.16.0)\n",
+      "Using cached lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl (8.0 MB)\n",
+      "Installing collected packages: lxml, pandas-datareader\n",
+      "Successfully installed lxml-4.9.3 pandas-datareader-0.10.0\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -53,15 +70,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 14.04 GB\n",
-      "Used RAM: 1.17 GB\n",
-      "Percentage Usage Of RAM: 9.2%\n",
+      "Available RAM: 14.14 GB\n",
+      "Used RAM: 1.07 GB\n",
+      "Percentage Usage Of RAM: 8.6%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.08 GB\n",
-      "Used Disk: 9.90 GB\n",
-      "Percentage Usage Of Disk: 39.6%\n"
+      "Available Disk: 15.07 GB\n",
+      "Used Disk: 9.92 GB\n",
+      "Percentage Usage Of Disk: 39.7%\n"
      ]
     }
    ],
@@ -99,7 +116,7 @@
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, f1_score\n",
     "from wrangle import prepare\n",
-    "from gbm_classifier import Classification"
+    "from lm_classifier import Classification"
    ]
   },
   {
@@ -201,7 +218,7 @@
       "> Fare vs. Cabin\n",
       "> Fare vs. Embarked\n",
       "> Fare vs. Title\n",
-      "7.22 Seconds\n"
+      "6.03 Seconds\n"
      ]
     }
    ],
@@ -246,12 +263,13 @@
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "0.33 Seconds\n",
+      "> Scaling Features\n",
+      "> Training Lasso\n",
+      "0.97 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "3.35 Seconds\n",
+      "2.97 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
       "0.08 Seconds\n",
@@ -261,14 +279,14 @@
       "0.03 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.21 Seconds\n",
-      "Accuracy: 0.8271573033707866\n",
-      "F1: 0.7937337088964591\n",
+      "0.19 Seconds\n",
+      "Accuracy: 0.8654494382022472\n",
+      "F1: 0.8463620209637581\n",
       "In Control: 100.0%\n",
       "Confusion Matrix:\n",
       "    0   1\n",
       "0  87  10\n",
-      "1  21  60\n"
+      "1  14  67\n"
      ]
     }
    ],
@@ -276,13 +294,14 @@
     "# build the model\n",
     "print(\"\\n---- Titanic Classification Analysis ----\\n\")\n",
     "model = Classification(\n",
-    "    name=\"XGBoost Without Feature Engineering\", \n",
+    "    name=\"Lasso Without Feature Engineering\", \n",
     "    path=None,\n",
     "    rename=False, \n",
     "    time=False, \n",
     "    binary=True, \n",
     "    imputation=True, \n",
     "    variance=True,\n",
+    "    scale=True,\n",
     "    atwood=False,\n",
     "    binning=False,\n",
     "    reciprocal=False, \n",
@@ -314,16 +333,16 @@
      "output_type": "stream",
      "text": [
       "Model Indicators:\n",
-      "1. Sex_male\n",
-      "2. Title_Rev.\n",
-      "3. Title_Mr.\n",
-      "4. Pclass_3\n",
-      "5. Sex_female\n",
-      "6. Pclass_2\n",
-      "7. Title_Master.\n",
-      "8. Ticket_4\n",
-      "9. Cabin_N\n",
-      "10. Pclass_1\n",
+      "1. Title_Master.\n",
+      "2. SibSp_5\n",
+      "3. Parch_4\n",
+      "4. SibSp_8\n",
+      "5. Sex_male\n",
+      "6. Fare\n",
+      "7. Parch_6\n",
+      "8. Title_Rev.\n",
+      "9. SibSp_0\n",
+      "10. Ticket_4\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -355,8 +374,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8258426966292135\n",
-      "F1: 0.794701986754967\n"
+      "Accuracy: 0.8651685393258427\n",
+      "F1: 0.8481012658227849\n"
      ]
     }
    ],
@@ -388,7 +407,7 @@
       "Confusion Matrix:\n",
       "    0   1\n",
       "0  87  10\n",
-      "1  21  60\n"
+      "1  14  67\n"
      ]
     }
    ],
@@ -439,11 +458,12 @@
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "0.4 Seconds\n",
+      "> Scaling Features\n",
+      "> Training Lasso\n",
+      "1.47 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.13 Seconds\n"
+      "0.08 Seconds\n"
      ]
     }
    ],
