--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -53,15 +53,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 14.04 GB\n",
-      "Used RAM: 1.17 GB\n",
-      "Percentage Usage Of RAM: 9.2%\n",
+      "Available RAM: 13.96 GB\n",
+      "Used RAM: 1.26 GB\n",
+      "Percentage Usage Of RAM: 9.8%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.08 GB\n",
-      "Used Disk: 9.90 GB\n",
-      "Percentage Usage Of Disk: 39.6%\n"
+      "Available Disk: 15.04 GB\n",
+      "Used Disk: 9.95 GB\n",
+      "Percentage Usage Of Disk: 39.8%\n"
      ]
     }
    ],
@@ -92,14 +92,23 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-18 15:15:46.094266: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
    "source": [
     "# import requirements\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, f1_score\n",
     "from wrangle import prepare\n",
-    "from gbm_classifier import Classification"
+    "from nnet_classifier import Classification"
    ]
   },
   {
@@ -201,7 +210,7 @@
       "> Fare vs. Cabin\n",
       "> Fare vs. Embarked\n",
       "> Fare vs. Title\n",
-      "7.22 Seconds\n"
+      "6.71 Seconds\n"
      ]
     }
    ],
@@ -246,29 +255,30 @@
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "0.33 Seconds\n",
+      "> Scaling Features\n",
+      "> Training Neural Network\n",
+      "55.37 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "3.35 Seconds\n",
+      "3.42 Seconds\n",
       "Model Indicators:\n",
-      "> Extracting Important Features\n",
-      "0.08 Seconds\n",
+      "> Perturbing Features\n",
+      "6.46 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.03 Seconds\n",
+      "0.14 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.21 Seconds\n",
-      "Accuracy: 0.8271573033707866\n",
-      "F1: 0.7937337088964591\n",
+      "0.19 Seconds\n",
+      "Accuracy: 0.7822022471910113\n",
+      "F1: 0.7333733401619313\n",
       "In Control: 100.0%\n",
       "Confusion Matrix:\n",
       "    0   1\n",
-      "0  87  10\n",
-      "1  21  60\n"
+      "0  85  12\n",
+      "1  27  54\n"
      ]
     }
    ],
@@ -276,13 +286,14 @@
     "# build the model\n",
     "print(\"\\n---- Titanic Classification Analysis ----\\n\")\n",
     "model = Classification(\n",
-    "    name=\"XGBoost Without Feature Engineering\", \n",
+    "    name=\"Tensorflow Without Feature Engineering\", \n",
     "    path=None,\n",
     "    rename=False, \n",
     "    time=False, \n",
     "    binary=True, \n",
     "    imputation=True, \n",
     "    variance=True,\n",
+    "    scale=True,\n",
     "    atwood=False,\n",
     "    binning=False,\n",
     "    reciprocal=False, \n",
@@ -314,16 +325,16 @@
      "output_type": "stream",
      "text": [
       "Model Indicators:\n",
-      "1. Sex_male\n",
-      "2. Title_Rev.\n",
-      "3. Title_Mr.\n",
-      "4. Pclass_3\n",
-      "5. Sex_female\n",
-      "6. Pclass_2\n",
-      "7. Title_Master.\n",
-      "8. Ticket_4\n",
-      "9. Cabin_N\n",
-      "10. Pclass_1\n",
+      "1. Parch_6\n",
+      "2. Parch_5\n",
+      "3. Parch_4\n",
+      "4. Parch_3\n",
+      "5. Parch_2\n",
+      "6. Parch_1\n",
+      "7. SibSp_8\n",
+      "8. Parch_0\n",
+      "9. SibSp_5\n",
+      "10. SibSp_4\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -355,8 +366,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8258426966292135\n",
-      "F1: 0.794701986754967\n"
+      "Accuracy: 0.7808988764044944\n",
+      "F1: 0.7346938775510203\n"
      ]
     }
    ],
@@ -387,8 +398,8 @@
      "text": [
       "Confusion Matrix:\n",
       "    0   1\n",
-      "0  87  10\n",
-      "1  21  60\n"
+      "0  85  12\n",
+      "1  27  54\n"
      ]
     }
    ],
@@ -439,11 +450,12 @@
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "0.4 Seconds\n",
+      "> Scaling Features\n",
+      "> Training Neural Network\n",
+      "1.37 Minutes\n",
       "Model Indicators:\n",
-      "> Extracting Important Features\n",
-      "0.13 Seconds\n"
+      "> Perturbing Features\n",
+      "8.22 Seconds\n"
      ]
     }
    ],
