--- a/lasso.ipynb
+++ b/lasso.ipynb
@@ -10,28 +10,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting plotly\n",
-      "  Obtaining dependency information for plotly from https://files.pythonhosted.org/packages/df/79/c80174d711ee26ee5da55a9cc3e248f1ec7a0188b5e4d6bbbbcd09b974b0/plotly-5.17.0-py2.py3-none-any.whl.metadata\n",
-      "  Using cached plotly-5.17.0-py2.py3-none-any.whl.metadata (7.0 kB)\n",
-      "Collecting tenacity>=6.2.0 (from plotly)\n",
-      "  Obtaining dependency information for tenacity>=6.2.0 from https://files.pythonhosted.org/packages/f4/f1/990741d5bb2487d529d20a433210ffa136a367751e454214013b441c4575/tenacity-8.2.3-py3-none-any.whl.metadata\n",
-      "  Using cached tenacity-8.2.3-py3-none-any.whl.metadata (1.0 kB)\n",
+      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.17.0)\n",
+      "Requirement already satisfied: tenacity>=6.2.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (8.2.3)\n",
       "Requirement already satisfied: packaging in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (23.1)\n",
-      "Using cached plotly-5.17.0-py2.py3-none-any.whl (15.6 MB)\n",
-      "Using cached tenacity-8.2.3-py3-none-any.whl (24 kB)\n",
-      "Installing collected packages: tenacity, plotly\n",
-      "Successfully installed plotly-5.17.0 tenacity-8.2.3\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting py-cpuinfo\n",
-      "  Using cached py_cpuinfo-9.0.0-py3-none-any.whl (22 kB)\n",
-      "Installing collected packages: py-cpuinfo\n",
-      "Successfully installed py-cpuinfo-9.0.0\n",
+      "Requirement already satisfied: py-cpuinfo in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (9.0.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
-      "Collecting pandas-datareader\n",
-      "  Using cached pandas_datareader-0.10.0-py3-none-any.whl (109 kB)\n",
-      "Collecting lxml (from pandas-datareader)\n",
-      "  Obtaining dependency information for lxml from https://files.pythonhosted.org/packages/44/1b/0771c38e65ad23e25368b5e07c920054774b8d12477a4fad116bf500de73/lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl.metadata\n",
-      "  Using cached lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl.metadata (3.8 kB)\n",
+      "Requirement already satisfied: pandas-datareader in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (0.10.0)\n",
+      "Requirement already satisfied: lxml in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (4.9.3)\n",
       "Requirement already satisfied: pandas>=0.23 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (2.0.3)\n",
       "Requirement already satisfied: requests>=2.19.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas-datareader) (2.31.0)\n",
       "Requirement already satisfied: python-dateutil>=2.8.2 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from pandas>=0.23->pandas-datareader) (2.8.2)\n",
@@ -43,9 +29,12 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (1.26.15)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (2023.7.22)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas>=0.23->pandas-datareader) (1.16.0)\n",
-      "Using cached lxml-4.9.3-cp38-cp38-manylinux_2_28_x86_64.whl (8.0 MB)\n",
-      "Installing collected packages: lxml, pandas-datareader\n",
-      "Successfully installed lxml-4.9.3 pandas-datareader-0.10.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: nltk in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (8.1.6)\n",
+      "Requirement already satisfied: joblib in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (1.3.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (2023.10.3)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (4.65.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -54,7 +43,8 @@
     "# install missing packages\n",
     "%pip install plotly\n",
     "%pip install py-cpuinfo\n",
-    "%pip install pandas-datareader"
+    "%pip install pandas-datareader\n",
+    "%pip install nltk"
    ]
   },
   {
@@ -70,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 14.14 GB\n",
-      "Used RAM: 1.07 GB\n",
-      "Percentage Usage Of RAM: 8.6%\n",
+      "Available RAM: 12.57 GB\n",
+      "Used RAM: 2.58 GB\n",
+      "Percentage Usage Of RAM: 18.8%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.07 GB\n",
-      "Used Disk: 9.92 GB\n",
-      "Percentage Usage Of Disk: 39.7%\n"
+      "Available Disk: 16.45 GB\n",
+      "Used Disk: 8.53 GB\n",
+      "Percentage Usage Of Disk: 34.2%\n"
      ]
     }
    ],
@@ -109,7 +99,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to /home/studio-lab-\n",
+      "[nltk_data]     user/nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# import requirements\n",
     "import numpy as np\n",
@@ -149,82 +149,13 @@
       "> Replacing Missing Values\n",
       "> Transforming Cabin\n",
       "> Shuffling The Data\n",
-      "0.01 Seconds\n",
-      "Plotting:\n",
-      "> Plotting Correlations\n",
-      "> Age vs. Fare\n",
-      "> Plotting Age\n",
-      "> Plotting Fare\n",
-      "> Plotting Survived\n",
-      "> Plotting Pclass\n",
-      "> Plotting Sex\n",
-      "> Plotting SibSp\n",
-      "> Plotting Parch\n",
-      "> Plotting Ticket\n",
-      "> Plotting Cabin\n",
-      "> Plotting Embarked\n",
-      "> Plotting Title\n",
-      "> Survived vs. Pclass\n",
-      "> Survived vs. Sex\n",
-      "> Survived vs. SibSp\n",
-      "> Survived vs. Parch\n",
-      "> Survived vs. Ticket\n",
-      "> Survived vs. Cabin\n",
-      "> Survived vs. Embarked\n",
-      "> Survived vs. Title\n",
-      "> Pclass vs. Sex\n",
-      "> Pclass vs. SibSp\n",
-      "> Pclass vs. Parch\n",
-      "> Pclass vs. Ticket\n",
-      "> Pclass vs. Cabin\n",
-      "> Pclass vs. Embarked\n",
-      "> Pclass vs. Title\n",
-      "> Sex vs. SibSp\n",
-      "> Sex vs. Parch\n",
-      "> Sex vs. Ticket\n",
-      "> Sex vs. Cabin\n",
-      "> Sex vs. Embarked\n",
-      "> Sex vs. Title\n",
-      "> SibSp vs. Parch\n",
-      "> SibSp vs. Ticket\n",
-      "> SibSp vs. Cabin\n",
-      "> SibSp vs. Embarked\n",
-      "> SibSp vs. Title\n",
-      "> Parch vs. Ticket\n",
-      "> Parch vs. Cabin\n",
-      "> Parch vs. Embarked\n",
-      "> Parch vs. Title\n",
-      "> Ticket vs. Cabin\n",
-      "> Ticket vs. Embarked\n",
-      "> Ticket vs. Title\n",
-      "> Cabin vs. Embarked\n",
-      "> Cabin vs. Title\n",
-      "> Embarked vs. Title\n",
-      "> Age vs. Survived\n",
-      "> Age vs. Pclass\n",
-      "> Age vs. Sex\n",
-      "> Age vs. SibSp\n",
-      "> Age vs. Parch\n",
-      "> Age vs. Ticket\n",
-      "> Age vs. Cabin\n",
-      "> Age vs. Embarked\n",
-      "> Age vs. Title\n",
-      "> Fare vs. Survived\n",
-      "> Fare vs. Pclass\n",
-      "> Fare vs. Sex\n",
-      "> Fare vs. SibSp\n",
-      "> Fare vs. Parch\n",
-      "> Fare vs. Ticket\n",
-      "> Fare vs. Cabin\n",
-      "> Fare vs. Embarked\n",
-      "> Fare vs. Title\n",
-      "6.03 Seconds\n"
+      "0.01 Seconds\n"
      ]
     }
    ],
    "source": [
     "# prepare the data for machine learning\n",
-    "titanic = prepare(df=titanic, name=\"Data Preparation\", path=None, plots=True)"
+    "titanic = prepare(df=titanic)"
    ]
   },
   {
@@ -258,6 +189,73 @@
       "\n",
       "---- Titanic Classification Analysis ----\n",
       "\n",
+      "Visualizing The Data:\n",
+      "> Plotting Correlations\n",
+      "> Plotting Age\n",
+      "> Plotting Fare\n",
+      "> Plotting Sex\n",
+      "> Plotting Ticket\n",
+      "> Plotting Cabin\n",
+      "> Plotting Embarked\n",
+      "> Plotting Title\n",
+      "> Plotting Survived\n",
+      "> Plotting Pclass\n",
+      "> Plotting SibSp\n",
+      "> Plotting Parch\n",
+      "> Sex vs. Ticket\n",
+      "> Sex vs. Cabin\n",
+      "> Sex vs. Embarked\n",
+      "> Sex vs. Title\n",
+      "> Sex vs. Survived\n",
+      "> Sex vs. Pclass\n",
+      "> Sex vs. SibSp\n",
+      "> Sex vs. Parch\n",
+      "> Ticket vs. Cabin\n",
+      "> Ticket vs. Embarked\n",
+      "> Ticket vs. Title\n",
+      "> Ticket vs. Survived\n",
+      "> Ticket vs. Pclass\n",
+      "> Ticket vs. SibSp\n",
+      "> Ticket vs. Parch\n",
+      "> Cabin vs. Embarked\n",
+      "> Cabin vs. Title\n",
+      "> Cabin vs. Survived\n",
+      "> Cabin vs. Pclass\n",
+      "> Cabin vs. SibSp\n",
+      "> Cabin vs. Parch\n",
+      "> Embarked vs. Title\n",
+      "> Embarked vs. Survived\n",
+      "> Embarked vs. Pclass\n",
+      "> Embarked vs. SibSp\n",
+      "> Embarked vs. Parch\n",
+      "> Title vs. Survived\n",
+      "> Title vs. Pclass\n",
+      "> Title vs. SibSp\n",
+      "> Title vs. Parch\n",
+      "> Survived vs. Pclass\n",
+      "> Survived vs. SibSp\n",
+      "> Survived vs. Parch\n",
+      "> Pclass vs. SibSp\n",
+      "> Pclass vs. Parch\n",
+      "> SibSp vs. Parch\n",
+      "> Age vs. Sex\n",
+      "> Age vs. Ticket\n",
+      "> Age vs. Cabin\n",
+      "> Age vs. Embarked\n",
+      "> Age vs. Title\n",
+      "> Age vs. Pclass\n",
+      "> Age vs. SibSp\n",
+      "> Age vs. Parch\n",
+      "> Fare vs. Sex\n",
+      "> Fare vs. Ticket\n",
+      "> Fare vs. Cabin\n",
+      "> Fare vs. Embarked\n",
+      "> Fare vs. Title\n",
+      "> Fare vs. Survived\n",
+      "> Fare vs. Pclass\n",
+      "> Fare vs. SibSp\n",
+      "> Fare vs. Parch\n",
+      "7.53 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
@@ -265,28 +263,30 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Lasso\n",
-      "0.97 Seconds\n",
+      "1.76 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "2.97 Seconds\n",
+      "5.5 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.08 Seconds\n",
+      "0.81 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
       "0.03 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.19 Seconds\n",
+      "0.25 Seconds\n",
+      "\n",
+      "Model Performance:\n",
       "Accuracy: 0.8654494382022472\n",
-      "F1: 0.8463620209637581\n",
+      "F1: 0.8623448455451421\n",
       "In Control: 100.0%\n",
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  87  10\n",
-      "1  14  67\n"
+      "          0         1\n",
+      "0  0.488764  0.056180\n",
+      "1  0.078652  0.376404\n"
      ]
     }
    ],
@@ -298,6 +298,7 @@
     "    path=None,\n",
     "    rename=False, \n",
     "    time=False, \n",
+    "    text=False,\n",
     "    binary=True, \n",
     "    imputation=True, \n",
     "    variance=True,\n",
@@ -313,13 +314,16 @@
     "    model.load()  # load the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
     "except:\n",
+    "    model.explore(titanic)\n",
     "    model.validate(X, y)  # build the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
+    "    print(\"\\nModel Performance:\")\n",
     "    print(f\"Accuracy: {model.accuracy}\")\n",
     "    print(f\"F1: {model.f1}\")\n",
     "    print(f\"In Control: {model.in_control}\")\n",
     "    print(\"Confusion Matrix:\")\n",
-    "    print(model.confusion)"
+    "    pd.set_option(\"display.width\", 1000)\n",
+    "    print(model.confusion / model.confusion.sum().sum())"
    ]
   },
   {
@@ -375,7 +379,7 @@
      "output_type": "stream",
      "text": [
       "Accuracy: 0.8651685393258427\n",
-      "F1: 0.8481012658227849\n"
+      "F1: 0.8634445723053319\n"
      ]
     }
    ],
@@ -388,6 +392,7 @@
     "f1 = f1_score(\n",
     "    y_true=testy.iloc[:,0].to_numpy(),\n",
     "    y_pred=predictions,\n",
+    "    average=\"macro\",\n",
     ")\n",
     "\n",
     "print(f\"Accuracy: {accuracy}\")\n",
@@ -405,9 +410,9 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  87  10\n",
-      "1  14  67\n"
+      "          0         1\n",
+      "0  0.488764  0.056180\n",
+      "1  0.078652  0.376404\n"
      ]
     }
    ],
@@ -427,7 +432,7 @@
     ")\n",
     "print(\"Confusion Matrix:\")\n",
     "pd.set_option(\"display.width\", 1000)\n",
-    "print(confusion)"
+    "print(confusion / confusion.sum().sum())"
    ]
   },
   {
@@ -460,10 +465,10 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Lasso\n",
-      "1.47 Seconds\n",
+      "2.21 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.08 Seconds\n"
+      "0.91 Seconds\n"
      ]
     }
    ],
