--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.17.0)\n",
+      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.18.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (8.2.3)\n",
       "Requirement already satisfied: packaging in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (23.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
@@ -29,6 +29,12 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (1.26.15)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (2023.7.22)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas>=0.23->pandas-datareader) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: nltk in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (8.1.6)\n",
+      "Requirement already satisfied: joblib in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (1.3.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (2023.10.3)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (4.65.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -37,7 +43,8 @@
     "# install missing packages\n",
     "%pip install plotly\n",
     "%pip install py-cpuinfo\n",
-    "%pip install pandas-datareader"
+    "%pip install pandas-datareader\n",
+    "%pip install nltk"
    ]
   },
   {
@@ -53,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 13.96 GB\n",
-      "Used RAM: 1.26 GB\n",
-      "Percentage Usage Of RAM: 9.8%\n",
+      "Available RAM: 14.05 GB\n",
+      "Used RAM: 1.10 GB\n",
+      "Percentage Usage Of RAM: 9.2%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.04 GB\n",
-      "Used Disk: 9.95 GB\n",
-      "Percentage Usage Of Disk: 39.8%\n"
+      "Available Disk: 15.88 GB\n",
+      "Used Disk: 9.10 GB\n",
+      "Percentage Usage Of Disk: 36.4%\n"
      ]
     }
    ],
@@ -97,7 +104,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-18 15:15:46.094266: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "[nltk_data] Downloading package vader_lexicon to /home/studio-lab-\n",
+      "[nltk_data]     user/nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
+      "2023-10-26 17:00:18.793107: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -141,82 +151,13 @@
       "> Replacing Missing Values\n",
       "> Transforming Cabin\n",
       "> Shuffling The Data\n",
-      "0.01 Seconds\n",
-      "Plotting:\n",
-      "> Plotting Correlations\n",
-      "> Age vs. Fare\n",
-      "> Plotting Age\n",
-      "> Plotting Fare\n",
-      "> Plotting Survived\n",
-      "> Plotting Pclass\n",
-      "> Plotting Sex\n",
-      "> Plotting SibSp\n",
-      "> Plotting Parch\n",
-      "> Plotting Ticket\n",
-      "> Plotting Cabin\n",
-      "> Plotting Embarked\n",
-      "> Plotting Title\n",
-      "> Survived vs. Pclass\n",
-      "> Survived vs. Sex\n",
-      "> Survived vs. SibSp\n",
-      "> Survived vs. Parch\n",
-      "> Survived vs. Ticket\n",
-      "> Survived vs. Cabin\n",
-      "> Survived vs. Embarked\n",
-      "> Survived vs. Title\n",
-      "> Pclass vs. Sex\n",
-      "> Pclass vs. SibSp\n",
-      "> Pclass vs. Parch\n",
-      "> Pclass vs. Ticket\n",
-      "> Pclass vs. Cabin\n",
-      "> Pclass vs. Embarked\n",
-      "> Pclass vs. Title\n",
-      "> Sex vs. SibSp\n",
-      "> Sex vs. Parch\n",
-      "> Sex vs. Ticket\n",
-      "> Sex vs. Cabin\n",
-      "> Sex vs. Embarked\n",
-      "> Sex vs. Title\n",
-      "> SibSp vs. Parch\n",
-      "> SibSp vs. Ticket\n",
-      "> SibSp vs. Cabin\n",
-      "> SibSp vs. Embarked\n",
-      "> SibSp vs. Title\n",
-      "> Parch vs. Ticket\n",
-      "> Parch vs. Cabin\n",
-      "> Parch vs. Embarked\n",
-      "> Parch vs. Title\n",
-      "> Ticket vs. Cabin\n",
-      "> Ticket vs. Embarked\n",
-      "> Ticket vs. Title\n",
-      "> Cabin vs. Embarked\n",
-      "> Cabin vs. Title\n",
-      "> Embarked vs. Title\n",
-      "> Age vs. Survived\n",
-      "> Age vs. Pclass\n",
-      "> Age vs. Sex\n",
-      "> Age vs. SibSp\n",
-      "> Age vs. Parch\n",
-      "> Age vs. Ticket\n",
-      "> Age vs. Cabin\n",
-      "> Age vs. Embarked\n",
-      "> Age vs. Title\n",
-      "> Fare vs. Survived\n",
-      "> Fare vs. Pclass\n",
-      "> Fare vs. Sex\n",
-      "> Fare vs. SibSp\n",
-      "> Fare vs. Parch\n",
-      "> Fare vs. Ticket\n",
-      "> Fare vs. Cabin\n",
-      "> Fare vs. Embarked\n",
-      "> Fare vs. Title\n",
-      "6.71 Seconds\n"
+      "0.01 Seconds\n"
      ]
     }
    ],
    "source": [
     "# prepare the data for machine learning\n",
-    "titanic = prepare(df=titanic, name=\"Data Preparation\", path=None, plots=True)"
+    "titanic = prepare(df=titanic)"
    ]
   },
   {
@@ -250,6 +191,73 @@
       "\n",
       "---- Titanic Classification Analysis ----\n",
       "\n",
+      "Visualizing The Data:\n",
+      "> Plotting Correlations\n",
+      "> Plotting Age\n",
+      "> Plotting Fare\n",
+      "> Plotting Sex\n",
+      "> Plotting Ticket\n",
+      "> Plotting Cabin\n",
+      "> Plotting Embarked\n",
+      "> Plotting Title\n",
+      "> Plotting Survived\n",
+      "> Plotting Pclass\n",
+      "> Plotting SibSp\n",
+      "> Plotting Parch\n",
+      "> Sex vs. Ticket\n",
+      "> Sex vs. Cabin\n",
+      "> Sex vs. Embarked\n",
+      "> Sex vs. Title\n",
+      "> Sex vs. Survived\n",
+      "> Sex vs. Pclass\n",
+      "> Sex vs. SibSp\n",
+      "> Sex vs. Parch\n",
+      "> Ticket vs. Cabin\n",
+      "> Ticket vs. Embarked\n",
+      "> Ticket vs. Title\n",
+      "> Ticket vs. Survived\n",
+      "> Ticket vs. Pclass\n",
+      "> Ticket vs. SibSp\n",
+      "> Ticket vs. Parch\n",
+      "> Cabin vs. Embarked\n",
+      "> Cabin vs. Title\n",
+      "> Cabin vs. Survived\n",
+      "> Cabin vs. Pclass\n",
+      "> Cabin vs. SibSp\n",
+      "> Cabin vs. Parch\n",
+      "> Embarked vs. Title\n",
+      "> Embarked vs. Survived\n",
+      "> Embarked vs. Pclass\n",
+      "> Embarked vs. SibSp\n",
+      "> Embarked vs. Parch\n",
+      "> Title vs. Survived\n",
+      "> Title vs. Pclass\n",
+      "> Title vs. SibSp\n",
+      "> Title vs. Parch\n",
+      "> Survived vs. Pclass\n",
+      "> Survived vs. SibSp\n",
+      "> Survived vs. Parch\n",
+      "> Pclass vs. SibSp\n",
+      "> Pclass vs. Parch\n",
+      "> SibSp vs. Parch\n",
+      "> Age vs. Sex\n",
+      "> Age vs. Ticket\n",
+      "> Age vs. Cabin\n",
+      "> Age vs. Embarked\n",
+      "> Age vs. Title\n",
+      "> Age vs. Pclass\n",
+      "> Age vs. SibSp\n",
+      "> Age vs. Parch\n",
+      "> Fare vs. Sex\n",
+      "> Fare vs. Ticket\n",
+      "> Fare vs. Cabin\n",
+      "> Fare vs. Embarked\n",
+      "> Fare vs. Title\n",
+      "> Fare vs. Survived\n",
+      "> Fare vs. Pclass\n",
+      "> Fare vs. SibSp\n",
+      "> Fare vs. Parch\n",
+      "7.21 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
@@ -257,28 +265,30 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Neural Network\n",
-      "55.37 Seconds\n",
+      "1.23 Minutes\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "3.42 Seconds\n",
+      "3.74 Seconds\n",
       "Model Indicators:\n",
       "> Perturbing Features\n",
-      "6.46 Seconds\n",
+      "9.28 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.14 Seconds\n",
+      "0.16 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.19 Seconds\n",
-      "Accuracy: 0.7822022471910113\n",
-      "F1: 0.7333733401619313\n",
+      "0.2 Seconds\n",
+      "\n",
+      "Model Performance:\n",
+      "Accuracy: 0.546876404494382\n",
+      "F1: 0.35283754935964917\n",
       "In Control: 100.0%\n",
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  85  12\n",
-      "1  27  54\n"
+      "          0    1\n",
+      "0  0.544944  0.0\n",
+      "1  0.455056  0.0\n"
      ]
     }
    ],
@@ -290,6 +300,7 @@
     "    path=None,\n",
     "    rename=False, \n",
     "    time=False, \n",
+    "    text=False,\n",
     "    binary=True, \n",
     "    imputation=True, \n",
     "    variance=True,\n",
@@ -299,19 +310,23 @@
     "    reciprocal=False, \n",
     "    interaction=False, \n",
     "    selection=False,\n",
+    "    tune=False,\n",
     "    plots=True,\n",
     ")\n",
     "try:\n",
     "    model.load()  # load the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
     "except:\n",
+    "    model.explore(titanic)\n",
     "    model.validate(X, y)  # build the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
+    "    print(\"\\nModel Performance:\")\n",
     "    print(f\"Accuracy: {model.accuracy}\")\n",
     "    print(f\"F1: {model.f1}\")\n",
     "    print(f\"In Control: {model.in_control}\")\n",
     "    print(\"Confusion Matrix:\")\n",
-    "    print(model.confusion)"
+    "    pd.set_option(\"display.width\", 1000)\n",
+    "    print(model.confusion / model.confusion.sum().sum())"
    ]
   },
   {
@@ -325,19 +340,19 @@
      "output_type": "stream",
      "text": [
       "Model Indicators:\n",
-      "1. Parch_6\n",
-      "2. Parch_5\n",
-      "3. Parch_4\n",
-      "4. Parch_3\n",
-      "5. Parch_2\n",
-      "6. Parch_1\n",
-      "7. SibSp_8\n",
-      "8. Parch_0\n",
-      "9. SibSp_5\n",
-      "10. SibSp_4\n",
+      "1. Sex_female\n",
+      "2. Title_Dr.\n",
+      "3. Title_Jonkheer.\n",
+      "4. Title_Lady.\n",
+      "5. Title_Major.\n",
+      "6. Title_Master.\n",
+      "7. Title_Miss.\n",
+      "8. Title_Mlle.\n",
+      "9. Title_Mme.\n",
+      "10. Title_Mr.\n",
       " \n",
       "Feature Drift:\n",
-      "None\n"
+      "1. Survived\n"
      ]
     }
    ],
@@ -366,8 +381,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.7808988764044944\n",
-      "F1: 0.7346938775510203\n"
+      "Accuracy: 0.5449438202247191\n",
+      "F1: 0.3527272727272727\n"
      ]
     }
    ],
@@ -380,6 +395,7 @@
     "f1 = f1_score(\n",
     "    y_true=testy.iloc[:,0].to_numpy(),\n",
     "    y_pred=predictions,\n",
+    "    average=\"macro\",\n",
     ")\n",
     "\n",
     "print(f\"Accuracy: {accuracy}\")\n",
@@ -397,9 +413,9 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  85  12\n",
-      "1  27  54\n"
+      "          0    1\n",
+      "0  0.544944  0.0\n",
+      "1  0.455056  0.0\n"
      ]
     }
    ],
@@ -419,7 +435,7 @@
     ")\n",
     "print(\"Confusion Matrix:\")\n",
     "pd.set_option(\"display.width\", 1000)\n",
-    "print(confusion)"
+    "print(confusion / confusion.sum().sum())"
    ]
   },
   {
@@ -452,10 +468,10 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Neural Network\n",
-      "1.37 Minutes\n",
+      "1.76 Minutes\n",
       "Model Indicators:\n",
       "> Perturbing Features\n",
-      "8.22 Seconds\n"
+      "10.61 Seconds\n"
      ]
     }
    ],
