--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -29,6 +29,12 @@
       "Requirement already satisfied: urllib3<3,>=1.21.1 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (1.26.15)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from requests>=2.19.0->pandas-datareader) (2023.7.22)\n",
       "Requirement already satisfied: six>=1.5 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from python-dateutil>=2.8.2->pandas>=0.23->pandas-datareader) (1.16.0)\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: nltk in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (3.8.1)\n",
+      "Requirement already satisfied: click in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (8.1.6)\n",
+      "Requirement already satisfied: joblib in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (1.3.0)\n",
+      "Requirement already satisfied: regex>=2021.8.3 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (2023.10.3)\n",
+      "Requirement already satisfied: tqdm in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from nltk) (4.65.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -37,7 +43,8 @@
     "# install missing packages\n",
     "%pip install plotly\n",
     "%pip install py-cpuinfo\n",
-    "%pip install pandas-datareader"
+    "%pip install pandas-datareader\n",
+    "%pip install nltk"
    ]
   },
   {
@@ -53,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 14.04 GB\n",
-      "Used RAM: 1.17 GB\n",
-      "Percentage Usage Of RAM: 9.2%\n",
+      "Available RAM: 12.42 GB\n",
+      "Used RAM: 2.73 GB\n",
+      "Percentage Usage Of RAM: 19.7%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.08 GB\n",
-      "Used Disk: 9.90 GB\n",
-      "Percentage Usage Of Disk: 39.6%\n"
+      "Available Disk: 16.23 GB\n",
+      "Used Disk: 8.75 GB\n",
+      "Percentage Usage Of Disk: 35.0%\n"
      ]
     }
    ],
@@ -92,7 +99,17 @@
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to /home/studio-lab-\n",
+      "[nltk_data]     user/nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "# import requirements\n",
     "import numpy as np\n",
@@ -132,82 +149,13 @@
       "> Replacing Missing Values\n",
       "> Transforming Cabin\n",
       "> Shuffling The Data\n",
-      "0.01 Seconds\n",
-      "Plotting:\n",
-      "> Plotting Correlations\n",
-      "> Age vs. Fare\n",
-      "> Plotting Age\n",
-      "> Plotting Fare\n",
-      "> Plotting Survived\n",
-      "> Plotting Pclass\n",
-      "> Plotting Sex\n",
-      "> Plotting SibSp\n",
-      "> Plotting Parch\n",
-      "> Plotting Ticket\n",
-      "> Plotting Cabin\n",
-      "> Plotting Embarked\n",
-      "> Plotting Title\n",
-      "> Survived vs. Pclass\n",
-      "> Survived vs. Sex\n",
-      "> Survived vs. SibSp\n",
-      "> Survived vs. Parch\n",
-      "> Survived vs. Ticket\n",
-      "> Survived vs. Cabin\n",
-      "> Survived vs. Embarked\n",
-      "> Survived vs. Title\n",
-      "> Pclass vs. Sex\n",
-      "> Pclass vs. SibSp\n",
-      "> Pclass vs. Parch\n",
-      "> Pclass vs. Ticket\n",
-      "> Pclass vs. Cabin\n",
-      "> Pclass vs. Embarked\n",
-      "> Pclass vs. Title\n",
-      "> Sex vs. SibSp\n",
-      "> Sex vs. Parch\n",
-      "> Sex vs. Ticket\n",
-      "> Sex vs. Cabin\n",
-      "> Sex vs. Embarked\n",
-      "> Sex vs. Title\n",
-      "> SibSp vs. Parch\n",
-      "> SibSp vs. Ticket\n",
-      "> SibSp vs. Cabin\n",
-      "> SibSp vs. Embarked\n",
-      "> SibSp vs. Title\n",
-      "> Parch vs. Ticket\n",
-      "> Parch vs. Cabin\n",
-      "> Parch vs. Embarked\n",
-      "> Parch vs. Title\n",
-      "> Ticket vs. Cabin\n",
-      "> Ticket vs. Embarked\n",
-      "> Ticket vs. Title\n",
-      "> Cabin vs. Embarked\n",
-      "> Cabin vs. Title\n",
-      "> Embarked vs. Title\n",
-      "> Age vs. Survived\n",
-      "> Age vs. Pclass\n",
-      "> Age vs. Sex\n",
-      "> Age vs. SibSp\n",
-      "> Age vs. Parch\n",
-      "> Age vs. Ticket\n",
-      "> Age vs. Cabin\n",
-      "> Age vs. Embarked\n",
-      "> Age vs. Title\n",
-      "> Fare vs. Survived\n",
-      "> Fare vs. Pclass\n",
-      "> Fare vs. Sex\n",
-      "> Fare vs. SibSp\n",
-      "> Fare vs. Parch\n",
-      "> Fare vs. Ticket\n",
-      "> Fare vs. Cabin\n",
-      "> Fare vs. Embarked\n",
-      "> Fare vs. Title\n",
-      "7.22 Seconds\n"
+      "0.01 Seconds\n"
      ]
     }
    ],
    "source": [
     "# prepare the data for machine learning\n",
-    "titanic = prepare(df=titanic, name=\"Data Preparation\", path=None, plots=True)"
+    "titanic = prepare(df=titanic)"
    ]
   },
   {
@@ -241,34 +189,105 @@
       "\n",
       "---- Titanic Classification Analysis ----\n",
       "\n",
+      "Visualizing The Data:\n",
+      "> Plotting Correlations\n",
+      "> Plotting Age\n",
+      "> Plotting Fare\n",
+      "> Plotting Sex\n",
+      "> Plotting Ticket\n",
+      "> Plotting Cabin\n",
+      "> Plotting Embarked\n",
+      "> Plotting Title\n",
+      "> Plotting Survived\n",
+      "> Plotting Pclass\n",
+      "> Plotting SibSp\n",
+      "> Plotting Parch\n",
+      "> Sex vs. Ticket\n",
+      "> Sex vs. Cabin\n",
+      "> Sex vs. Embarked\n",
+      "> Sex vs. Title\n",
+      "> Sex vs. Survived\n",
+      "> Sex vs. Pclass\n",
+      "> Sex vs. SibSp\n",
+      "> Sex vs. Parch\n",
+      "> Ticket vs. Cabin\n",
+      "> Ticket vs. Embarked\n",
+      "> Ticket vs. Title\n",
+      "> Ticket vs. Survived\n",
+      "> Ticket vs. Pclass\n",
+      "> Ticket vs. SibSp\n",
+      "> Ticket vs. Parch\n",
+      "> Cabin vs. Embarked\n",
+      "> Cabin vs. Title\n",
+      "> Cabin vs. Survived\n",
+      "> Cabin vs. Pclass\n",
+      "> Cabin vs. SibSp\n",
+      "> Cabin vs. Parch\n",
+      "> Embarked vs. Title\n",
+      "> Embarked vs. Survived\n",
+      "> Embarked vs. Pclass\n",
+      "> Embarked vs. SibSp\n",
+      "> Embarked vs. Parch\n",
+      "> Title vs. Survived\n",
+      "> Title vs. Pclass\n",
+      "> Title vs. SibSp\n",
+      "> Title vs. Parch\n",
+      "> Survived vs. Pclass\n",
+      "> Survived vs. SibSp\n",
+      "> Survived vs. Parch\n",
+      "> Pclass vs. SibSp\n",
+      "> Pclass vs. Parch\n",
+      "> SibSp vs. Parch\n",
+      "> Age vs. Sex\n",
+      "> Age vs. Ticket\n",
+      "> Age vs. Cabin\n",
+      "> Age vs. Embarked\n",
+      "> Age vs. Title\n",
+      "> Age vs. Pclass\n",
+      "> Age vs. SibSp\n",
+      "> Age vs. Parch\n",
+      "> Fare vs. Sex\n",
+      "> Fare vs. Ticket\n",
+      "> Fare vs. Cabin\n",
+      "> Fare vs. Embarked\n",
+      "> Fare vs. Title\n",
+      "> Fare vs. Survived\n",
+      "> Fare vs. Pclass\n",
+      "> Fare vs. SibSp\n",
+      "> Fare vs. Parch\n",
+      "9.61 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "0.33 Seconds\n",
+      "> Tuning XGBoost\n",
+      "> Cross Validating 15 Models\n",
+      "> Training The Best Model\n",
+      "6.67 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "3.35 Seconds\n",
+      "5.23 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.08 Seconds\n",
+      "0.85 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.03 Seconds\n",
+      "0.04 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.21 Seconds\n",
-      "Accuracy: 0.8271573033707866\n",
-      "F1: 0.7937337088964591\n",
+      "0.24 Seconds\n",
+      "\n",
+      "Model Performance:\n",
+      "Accuracy: 0.8216404494382022\n",
+      "F1: 0.8153640046769515\n",
       "In Control: 100.0%\n",
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  87  10\n",
-      "1  21  60\n"
+      "          0         1\n",
+      "0  0.488764  0.056180\n",
+      "1  0.123596  0.331461\n"
      ]
     }
    ],
@@ -280,6 +299,7 @@
     "    path=None,\n",
     "    rename=False, \n",
     "    time=False, \n",
+    "    text=False,\n",
     "    binary=True, \n",
     "    imputation=True, \n",
     "    variance=True,\n",
@@ -288,19 +308,23 @@
     "    reciprocal=False, \n",
     "    interaction=False, \n",
     "    selection=False,\n",
+    "    tune=True,\n",
     "    plots=True,\n",
     ")\n",
     "try:\n",
     "    model.load()  # load the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
     "except:\n",
+    "    model.explore(titanic)\n",
     "    model.validate(X, y)  # build the machine learning pipeline\n",
     "    predictions = model.predict(testX)\n",
+    "    print(\"\\nModel Performance:\")\n",
     "    print(f\"Accuracy: {model.accuracy}\")\n",
     "    print(f\"F1: {model.f1}\")\n",
     "    print(f\"In Control: {model.in_control}\")\n",
     "    print(\"Confusion Matrix:\")\n",
-    "    print(model.confusion)"
+    "    pd.set_option(\"display.width\", 1000)\n",
+    "    print(model.confusion / model.confusion.sum().sum())"
    ]
   },
   {
@@ -319,11 +343,11 @@
       "3. Title_Mr.\n",
       "4. Pclass_3\n",
       "5. Sex_female\n",
-      "6. Pclass_2\n",
+      "6. Ticket_4\n",
       "7. Title_Master.\n",
-      "8. Ticket_4\n",
-      "9. Cabin_N\n",
-      "10. Pclass_1\n",
+      "8. Pclass_2\n",
+      "9. Pclass_1\n",
+      "10. Cabin_N\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -355,8 +379,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8258426966292135\n",
-      "F1: 0.794701986754967\n"
+      "Accuracy: 0.8202247191011236\n",
+      "F1: 0.815663430420712\n"
      ]
     }
    ],
@@ -369,6 +393,7 @@
     "f1 = f1_score(\n",
     "    y_true=testy.iloc[:,0].to_numpy(),\n",
     "    y_pred=predictions,\n",
+    "    average=\"macro\",\n",
     ")\n",
     "\n",
     "print(f\"Accuracy: {accuracy}\")\n",
@@ -386,9 +411,9 @@
      "output_type": "stream",
      "text": [
       "Confusion Matrix:\n",
-      "    0   1\n",
-      "0  87  10\n",
-      "1  21  60\n"
+      "          0         1\n",
+      "0  0.488764  0.056180\n",
+      "1  0.123596  0.331461\n"
      ]
     }
    ],
@@ -408,7 +433,7 @@
     ")\n",
     "print(\"Confusion Matrix:\")\n",
     "pd.set_option(\"display.width\", 1000)\n",
-    "print(confusion)"
+    "print(confusion / confusion.sum().sum())"
    ]
   },
   {
@@ -440,10 +465,10 @@
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
       "> Training XGBoost\n",
-      "0.4 Seconds\n",
+      "1.39 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.13 Seconds\n"
+      "0.94 Seconds\n"
      ]
     }
    ],
