--- a/tensorflow.ipynb
+++ b/tensorflow.ipynb
@@ -60,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 14.05 GB\n",
-      "Used RAM: 1.10 GB\n",
-      "Percentage Usage Of RAM: 9.2%\n",
+      "Available RAM: 12.73 GB\n",
+      "Used RAM: 2.42 GB\n",
+      "Percentage Usage Of RAM: 17.7%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 15.88 GB\n",
-      "Used Disk: 9.10 GB\n",
-      "Percentage Usage Of Disk: 36.4%\n"
+      "Available Disk: 16.82 GB\n",
+      "Used Disk: 8.17 GB\n",
+      "Percentage Usage Of Disk: 32.7%\n"
      ]
     }
    ],
@@ -107,7 +107,7 @@
       "[nltk_data] Downloading package vader_lexicon to /home/studio-lab-\n",
       "[nltk_data]     user/nltk_data...\n",
       "[nltk_data]   Package vader_lexicon is already up-to-date!\n",
-      "2023-10-26 17:00:18.793107: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "2023-10-27 16:45:46.633794: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
       "To enable the following instructions: SSE4.1 SSE4.2 AVX AVX2 AVX512F FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
      ]
     }
@@ -151,7 +151,7 @@
       "> Replacing Missing Values\n",
       "> Transforming Cabin\n",
       "> Shuffling The Data\n",
-      "0.01 Seconds\n"
+      "0.02 Seconds\n"
      ]
     }
    ],
@@ -257,7 +257,7 @@
       "> Fare vs. Pclass\n",
       "> Fare vs. SibSp\n",
       "> Fare vs. Parch\n",
-      "7.21 Seconds\n",
+      "19.77 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
@@ -265,21 +265,21 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Neural Network\n",
-      "1.23 Minutes\n",
+      "1.4 Minutes\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "3.74 Seconds\n",
+      "15.3 Seconds\n",
       "Model Indicators:\n",
       "> Perturbing Features\n",
-      "9.28 Seconds\n",
+      "27.23 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.16 Seconds\n",
+      "0.49 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.2 Seconds\n",
+      "0.75 Seconds\n",
       "\n",
       "Model Performance:\n",
       "Accuracy: 0.546876404494382\n",
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "id": "2b88af05-8286-459b-b34d-0086c4065fa6",
    "metadata": {},
    "outputs": [
@@ -359,11 +359,11 @@
    "source": [
     "# model diagnostics\n",
     "print(\"Model Indicators:\")\n",
-    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10]):\n",
+    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {indicator}\")\n",
     "print(\" \")\n",
     "print(\"Feature Drift:\")\n",
-    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10]):\n",
+    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {feature}\")\n",
     "if model.drift.loc[model.drift[\"pvalue\"] < 0.05].shape[0] == 0:\n",
     "    print(\"None\")"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "id": "30b9ca50-06d6-49b7-848b-c0852e302909",
    "metadata": {
     "tags": []
@@ -468,10 +468,10 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Neural Network\n",
-      "1.76 Minutes\n",
+      "3.46 Minutes\n",
       "Model Indicators:\n",
       "> Perturbing Features\n",
-      "10.61 Seconds\n"
+      "47.08 Seconds\n"
      ]
     }
    ],
