--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.17.0)\n",
+      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.18.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (8.2.3)\n",
       "Requirement already satisfied: packaging in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (23.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
@@ -60,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 12.42 GB\n",
-      "Used RAM: 2.73 GB\n",
-      "Percentage Usage Of RAM: 19.7%\n",
+      "Available RAM: 12.89 GB\n",
+      "Used RAM: 2.25 GB\n",
+      "Percentage Usage Of RAM: 16.6%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 16.23 GB\n",
-      "Used Disk: 8.75 GB\n",
-      "Percentage Usage Of Disk: 35.0%\n"
+      "Available Disk: 17.01 GB\n",
+      "Used Disk: 7.97 GB\n",
+      "Percentage Usage Of Disk: 31.9%\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
       "> Fare vs. Pclass\n",
       "> Fare vs. SibSp\n",
       "> Fare vs. Parch\n",
-      "9.61 Seconds\n",
+      "13.31 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
@@ -264,21 +264,21 @@
       "> Tuning XGBoost\n",
       "> Cross Validating 15 Models\n",
       "> Training The Best Model\n",
-      "6.67 Seconds\n",
+      "14.23 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "5.23 Seconds\n",
+      "8.43 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.85 Seconds\n",
+      "1.12 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.04 Seconds\n",
+      "0.06 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.24 Seconds\n",
+      "0.63 Seconds\n",
       "\n",
       "Model Performance:\n",
       "Accuracy: 0.8216404494382022\n",
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "2b88af05-8286-459b-b34d-0086c4065fa6",
    "metadata": {},
    "outputs": [
@@ -338,16 +338,16 @@
      "output_type": "stream",
      "text": [
       "Model Indicators:\n",
-      "1. Sex_male\n",
-      "2. Title_Rev.\n",
-      "3. Title_Mr.\n",
+      "1. Title_Mr.\n",
+      "2. Sex_female\n",
+      "3. Sex_male\n",
       "4. Pclass_3\n",
-      "5. Sex_female\n",
-      "6. Ticket_4\n",
-      "7. Title_Master.\n",
-      "8. Pclass_2\n",
+      "5. Cabin_N\n",
+      "6. Title_Rev.\n",
+      "7. Ticket_1\n",
+      "8. Cabin_E\n",
       "9. Pclass_1\n",
-      "10. Cabin_N\n",
+      "10. Pclass_2\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -357,11 +357,11 @@
    "source": [
     "# model diagnostics\n",
     "print(\"Model Indicators:\")\n",
-    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10]):\n",
+    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {indicator}\")\n",
     "print(\" \")\n",
     "print(\"Feature Drift:\")\n",
-    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10]):\n",
+    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {feature}\")\n",
     "if model.drift.loc[model.drift[\"pvalue\"] < 0.05].shape[0] == 0:\n",
     "    print(\"None\")"
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "30b9ca50-06d6-49b7-848b-c0852e302909",
    "metadata": {
     "tags": []
@@ -464,11 +464,13 @@
       "> Transforming Categorical Features\n",
       "> Filling In Missing Values\n",
       "> Removing Constant Features\n",
-      "> Training XGBoost\n",
-      "1.39 Seconds\n",
+      "> Tuning XGBoost\n",
+      "> Cross Validating 15 Models\n",
+      "> Training The Best Model\n",
+      "21.23 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.94 Seconds\n"
+      "1.99 Seconds\n"
      ]
     }
    ],
