--- a/lasso.ipynb
+++ b/lasso.ipynb
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.17.0)\n",
+      "Requirement already satisfied: plotly in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (5.18.0)\n",
       "Requirement already satisfied: tenacity>=6.2.0 in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (8.2.3)\n",
       "Requirement already satisfied: packaging in /opt/conda/envs/sagemaker-distribution/lib/python3.8/site-packages (from plotly) (23.1)\n",
       "Note: you may need to restart the kernel to use updated packages.\n",
@@ -60,15 +60,15 @@
      "output_type": "stream",
      "text": [
       "Total RAM: 15.47 GB\n",
-      "Available RAM: 12.57 GB\n",
-      "Used RAM: 2.58 GB\n",
-      "Percentage Usage Of RAM: 18.8%\n",
+      "Available RAM: 13.06 GB\n",
+      "Used RAM: 2.09 GB\n",
+      "Percentage Usage Of RAM: 15.6%\n",
       "CPU Cores: 4\n",
       "CPU Speed: 2.5000 GHz\n",
       "Total Disk: 24.99 GB\n",
-      "Available Disk: 16.45 GB\n",
-      "Used Disk: 8.53 GB\n",
-      "Percentage Usage Of Disk: 34.2%\n"
+      "Available Disk: 17.02 GB\n",
+      "Used Disk: 7.96 GB\n",
+      "Percentage Usage Of Disk: 31.9%\n"
      ]
     }
    ],
@@ -149,7 +149,7 @@
       "> Replacing Missing Values\n",
       "> Transforming Cabin\n",
       "> Shuffling The Data\n",
-      "0.01 Seconds\n"
+      "0.02 Seconds\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
       "> Fare vs. Pclass\n",
       "> Fare vs. SibSp\n",
       "> Fare vs. Parch\n",
-      "7.53 Seconds\n",
+      "14.18 Seconds\n",
       "Model Training:\n",
       "> Transforming The Training Data\n",
       "> Transforming Categorical Features\n",
@@ -263,21 +263,21 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Lasso\n",
-      "1.76 Seconds\n",
+      "2.33 Seconds\n",
       "Model Performance:\n",
       "> Transforming The Testing Data\n",
       "> Scoring The Model\n",
-      "5.5 Seconds\n",
+      "12.23 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.81 Seconds\n",
+      "1.6 Seconds\n",
       "Model Prediction:\n",
       "> Transforming The New Data\n",
       "> Getting Predictions\n",
-      "0.03 Seconds\n",
+      "0.11 Seconds\n",
       "Model Monitoring:\n",
       "> Computing Feature Drift\n",
-      "0.25 Seconds\n",
+      "0.63 Seconds\n",
       "\n",
       "Model Performance:\n",
       "Accuracy: 0.8654494382022472\n",
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "id": "2b88af05-8286-459b-b34d-0086c4065fa6",
    "metadata": {},
    "outputs": [
@@ -338,15 +338,15 @@
      "text": [
       "Model Indicators:\n",
       "1. Title_Master.\n",
-      "2. SibSp_5\n",
-      "3. Parch_4\n",
-      "4. SibSp_8\n",
-      "5. Sex_male\n",
-      "6. Fare\n",
-      "7. Parch_6\n",
-      "8. Title_Rev.\n",
-      "9. SibSp_0\n",
-      "10. Ticket_4\n",
+      "2. SibSp_2\n",
+      "3. SibSp_0\n",
+      "4. Age\n",
+      "5. SibSp_1\n",
+      "6. Ticket_W\n",
+      "7. Sex_male\n",
+      "8. Parch_4\n",
+      "9. Title_Sir.\n",
+      "10. Fare\n",
       " \n",
       "Feature Drift:\n",
       "None\n"
@@ -356,11 +356,11 @@
    "source": [
     "# model diagnostics\n",
     "print(\"Model Indicators:\")\n",
-    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10]):\n",
+    "for i, indicator in enumerate(model.indicators[\"Indicator\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {indicator}\")\n",
     "print(\" \")\n",
     "print(\"Feature Drift:\")\n",
-    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10]):\n",
+    "for i, feature in enumerate(model.drift.loc[model.drift[\"pvalue\"] < 0.05, \"Feature\"][:10].tolist()):\n",
     "    print(f\"{i+1}. {feature}\")\n",
     "if model.drift.loc[model.drift[\"pvalue\"] < 0.05].shape[0] == 0:\n",
     "    print(\"None\")"
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "id": "30b9ca50-06d6-49b7-848b-c0852e302909",
    "metadata": {
     "tags": []
@@ -465,10 +465,10 @@
       "> Removing Constant Features\n",
       "> Scaling Features\n",
       "> Training Lasso\n",
-      "2.21 Seconds\n",
+      "3.36 Seconds\n",
       "Model Indicators:\n",
       "> Extracting Important Features\n",
-      "0.91 Seconds\n"
+      "1.09 Seconds\n"
      ]
     }
    ],
